# bach

./: .gitattributes  .gitignore  .gitignore~  History.txt  License.rtf  License.txt  Readme.txt  package-info.json
.github/: FUNDING.yml
extensions/: bach.mxe  bach.mxe64
extras/: bach.overview.maxpat
help/: @exportlyrics  bach.+.maxhelp  bach.-.maxhelp  bach.abs.maxhelp  bach.adj.maxhelp  bach.append.maxhelp  bach.approx.maxhelp  bach.args.maxhelp  bach.arithmser.maxhelp  bach.autoscale.maxhelp  bach.bachtree2omtree.maxhelp  bach.backtick.maxhelp  bach.beatbox.maxhelp  bach.beatunbox.maxhelp  bach.belong.maxhelp  bach.bin.maxhelp  bach.bitdecode.maxhelp  bach.cartesianprod.maxhelp  bach.cartopol.maxhelp  bach.change.maxhelp  bach.chordrev.maxhelp  (+1254 more)
source/commons/SDIF-3.11.4-src/: AUTHORS  ChangeLog  ReleaseNotes  acinclude.m4  aclocal.m4  configure.in  sdif.pc.in
source/commons/SDIF-3.11.4-src/cmModules/: ADD_EASDIF_FLAGS.cmake  CHECK_SIZEOF.cmake  CVS_Targets.cmake  GET_ARCH.cmake  GET_GCC_VERSION.cmake  OVERWRITE_COMPILER.cmake  REDIRECT_COMPILERS_TO_SYSROOT.cmake  REPLACE_DEFAULT_VALUE_MACRO.cmake  SET_INSTALL_NAME.cmake.in  update.sh
source/commons/SDIF-3.11.4-src/doc/: Makefile.am  Makefile.in  SdifManuelDoc.html  SdifNormBar.html  SdifNormDoc.html  SdifProgDoc.html  index.html
source/commons/SDIF-3.11.4-src/doc/pics/: Makefile.am  Makefile.in
source/commons/SDIF-3.11.4-src/examples/: Makefile.am  list-nvt.c
source/commons/SDIF-3.11.4-src/include/: Makefile.am  Makefile.in  sdif_version.h
source/commons/SDIF-3.11.4-src/macosxbuild/: Info.plist  Makefile.am  Makefile.in  README.MacOSX  texttosdif-Info.plist
source/commons/SDIF-3.11.4-src/macosxbuild/SDIF-old.xcodeproj/: Makefile.in  andreaagostini.mode1v3  andreaagostini.pbxuser  project.pbxproj
source/commons/SDIF-3.11.4-src/macosxbuild/SDIF.xcodeproj/: andreaagostini.pbxuser
source/commons/SDIF-3.11.4-src/sdif/: Makefile.in  SdifConvToText.c  SdifErrMess.c  SdifErrMess.h  SdifFGet.c  SdifFGet.h  SdifFPrint.c  SdifFPut.h  SdifFRead.c  SdifFRead.h  SdifFScan.c  SdifFScan.h  SdifFWrite.c  SdifFWrite.h  SdifFile.c  SdifFrame.c  SdifFrame.h  SdifFrameType.c  SdifFrameType.h  SdifGlobals.c  SdifGlobals.h  SdifHard_OS.h  SdifHighLevel.c  SdifNameValue.c  SdifPreTypes.c  SdifRWLowLevel.c  SdifRWLowLevel.h  SdifSelect.h  SdifString.c  SdifTest.c  SdifTimePosition.c  config.h  host_architecture.h  sdif_portability.h  sdiftypes.h
source/commons/SDIF-3.11.4-src/sdifcpp/: Makefile.in  SdifErrMess.cpp  SdifFWrite.cpp  SdifFile.cpp  SdifHash.cpp  SdifList.cpp  SdifMatrixType.cpp  SdifNameValue.cpp  SdifRWLowLevel.cpp  SdifSelect.cpp  SdifTest.cpp
source/commons/SDIF-3.11.4-src/test/: CMakeLists.txt  Makefile.am  cmd_testcheck  test1.c  test_NVT  test_conv2  utils.c
source/commons/SDIF-3.11.4-src/test/files/: Makefile.am  Makefile.in
source/commons/SDIF-3.11.4-src/test/files/sdif/: Makefile.in
source/commons/SDIF-3.11.4-src/test/files/sdifref/: AO.sdif  Makefile.in  P0.sdif  P0M.sdif  P0M1.sdif  P0M2.sdif  P2.sdif  Patch0_2.sdif  perc.sdif  t3.sdif  t4.sdif
source/commons/SDIF-3.11.4-src/test/files/sdifw/: Makefile.in
source/commons/SDIF-3.11.4-src/test/files/txt/: 1fof.txt  AO.txt  P0M2.txt  Patch1.txt  Patch1Mode.txt  bat.txt  orgue.txt  perc.txt  t4.txt  t5.txt
source/commons/SDIF-3.11.4-src/test/files/txtw/: Makefile.in
source/commons/SDIF-3.11.4-src/tools/: CMakeLists.txt  Makefile.am  Makefile.in  querysdif.dsp  sdifextract.c  sdiftotext.c  tosdif.dsp
source/commons/libraries/SDIF-3.11.4-src/: CMakeLists.txt  Makefile.am  Makefile.in  README  configure  sdif.dsw  sdif.pc.in  sdif.spec.in  sdif.vcproj
source/commons/libraries/SDIF-3.11.4-src/cmModules/: BuildTypeTargets.cmake  CLEAN_CMAKE.cmake  CREATE_CVSTAGS_MACRO.cmake  FindPerlLibs.cmake  Makefile.am  Makefile.in  RenameInstalledStaticLib.cmake.in  SET_LOCAL_DEFAULTS.cmake  STORE_FILES_LIST.cmake  UseSWIG.cmake  cvsnew.sh  trycompile.c.in
source/commons/libraries/SDIF-3.11.4-src/data/: Makefile.am  Makefile.in  SdifTypes.STYP
source/commons/libraries/SDIF-3.11.4-src/doc/: Patch.html  SdifManuelBar.html  SdifNormDocFr.html  SdifProgBar.html  Todo.html  download.html  indexManuel.html  indexNorm.html  indexProg.html
source/commons/libraries/SDIF-3.11.4-src/examples/: Makefile.in  list-types.c
source/commons/libraries/SDIF-3.11.4-src/include/: sdif.h  sdif.h.in  sdif_version.h.in
source/commons/libraries/SDIF-3.11.4-src/macosxbuild/: sdiftotext-Info.plist
source/commons/libraries/SDIF-3.11.4-src/macosxbuild/SDIF.xcodeproj/: Makefile.am  project.pbxproj
source/commons/libraries/SDIF-3.11.4-src/sdif/: CMakeLists.txt  Makefile.am  SdifErrMess.h  SdifFGet.c  SdifFPut.c  SdifFRead.c  SdifFWrite.c  SdifFile.c  SdifFile.h  SdifFrameType.c  SdifGlobals.c  SdifHash.h  SdifHighLevel.h  SdifList.h  SdifMatrix.c  SdifMatrix.h  SdifMatrixType.h  SdifPrint.c  SdifRWLowLevel.c  SdifSelect.c  SdifStreamID.h  SdifTest.h  config.h.in  host_architecture.h  sdif.dsp
source/commons/libraries/SDIF-3.11.4-src/sdifcpp/: Makefile.am  SdifCheck.cpp  SdifFGet.cpp  SdifFRead.cpp  SdifFrameType.cpp  SdifGlobals.cpp  SdifHard_OS.cpp  SdifSignatureTab.cpp  SdifStreamID.cpp  SdifTextConv.cpp
source/commons/libraries/SDIF-3.11.4-src/test/: Makefile.in  test2.c  test_Header  testcheck.c  testselect.c  utils.h  xpianoRes.m5.FIL.sdif
source/commons/libraries/SDIF-3.11.4-src/test/files/sdif/: Makefile.am
source/commons/libraries/SDIF-3.11.4-src/test/files/sdifref/: 1fof.sdif  Makefile.am  Patch0.sdif  Patch1.sdif  Patch1Mode.sdif  README  bat.sdif  t.sdif  t2.sdif  t5.sdif
source/commons/libraries/SDIF-3.11.4-src/test/files/sdifw/: Makefile.am  README
source/commons/libraries/SDIF-3.11.4-src/test/files/txt/: Makefile.am  Makefile.in  P0.txt  P0M.txt  P0M1.txt  P2.txt  Patch0.txt  Patch0_2.txt  t.txt  t2.txt  t3.txt
source/commons/libraries/SDIF-3.11.4-src/test/files/txtw/: Makefile.am  README
source/commons/libraries/SDIF-3.11.4-src/tools/: querysdif.c  querysdif.dsp  sdifextract.dsp  sdiftotext.dsp  sdifusage.dsp  tosdif.c  tosdif.dsp
(+2197 files in other folders)
