# $Id: Makefile.am,v 1.5 2008/09/18 15:19:51 diemo Exp $
#
# ./include/Makefile.am		September 2000		Patrice Tisserand
#
# Source file for GNU automake, generates Makefile.in.
#
#
# This file is part of the IRCAM SDIF Library (http://www.ircam.fr/sdif)
#
# Copyright (C) 1998, 1999, 2000 by IRCAM - Centre Pompidou, Paris, France.
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# See file COPYING for further informations on licensing terms.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
#
# For any information regarding this and other IRCAM software, please
# send email to:  sdif@ircam.fr
#
# $Log: Makefile.am,v $
# Revision 1.5  2008/09/18 15:19:51  diemo
# include current updated SDIF.xcodeproj, generated sdif_version.h for mac building out of the box
# TO MAKE A FILE RELEASE ON SOURCEFORGE, DO:
#
#    make -k pub
#
# Revision 1.4  2001/07/12 14:11:48  roebel
# Added include file holding library version defines to the distribution.
#
# Revision 1.3  2001/05/02 09:34:39  tisseran
# Change License from GNU Public License to GNU Lesser Public License.
#
# Revision 1.2  2000/10/27 20:03:18  roebel
# autoconf merged back to main trunk
#
# Revision 1.1.2.3  2000/10/26  17:27:38  schwarz
# Added header with copyright and links to all Makefile.am and configure.in.
#
# Revision 1.1.2.2  2000/08/21  17:00:36  tisseran
# *** empty log message ***
#
# Revision 1.1.2.1  2000/08/21  13:07:38  tisseran
# *** empty log message ***
#


EXTRA_DIST = sdif_version.h.in sdif_version.h

sdifincdir = $(prefix)/include
sdifinc_HEADERS = sdif.h sdif_version.h
